# netsec-indico-dispatch

./: .gitignore  LICENSE  README.md  pyproject.toml
indico_netsec_dispatch/: __init__.py  plugin.py  tasks.py
